# StratusScan-CLI

./: .gitignore  AGENTS.md  GITHUB_RELEASE_v3.1.0.md  GITHUB_RELEASE_v3.1.1.md  README.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.1.1.md  advanced-settings.py  advanced_settings.py  config-template.json  config.json  configure.py  pyproject.toml  requirements-dev.txt  smart_scan.py  stratusscan.py  stratusscan.py.backup  utils.py
.collab/: collab-contract.md  handoff-board.yaml  kanban-board.md  readme.md
.collab/first-prompts/: claude-first-prompt.md  codex-first-prompt.md  gemini-first-prompt.md
.collab/project-files/: .markdown-link-check.json  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  TESTING.md
.collab/project-plans/: final-service-coverage.md  multi-partition-compliance-audit.md  prompt-standardization.md  region-selection-partition-awareness.md  resource-dependency-mapping.md  smart-scan-feature.md
.collab/reference/: govcloud-service-analysis.json  partition-compliance-audit-progress.md  region-selection-audit-20251203.txt  region-selection-verification-12.04.2025.md  session-summary-12.02.2025.md
.collab/session-notes/: 2025-12-03-region-selection-fixes.md  2025-12-09-smart-scan-enhancements.md  2025-12-09-vpc-export-enhancement-region-ux.md
.collab/tools/: detect-region-selection-patterns.sh
.github/workflows/: auto-approve-self.yml  test.yml
policies/: AWS-MANAGED-POLICIES.md  QUICK-START.md  README.md  commercial-optional-permissions.json  govcloud-optional-permissions.json  govcloud-required-permissions.json  stratusscan-optional-permissions.json  stratusscan-required-permissions.json
reference/: dedicated-host-pricing.json  documentdb-pricing.json  ebs-pricing.json  ebsvol-pricing.csv  ec2-pricing.csv  ec2-pricing.json  efs-pricing.json  elasticache-pricing.json  fsx-pricing.json  natgw-pricing.csv  natgw-pricing.json  neptune-pricing.json  opensearch-pricing.json  rds-instance-pricing.csv  rds-pricing.csv  rds-pricing.json  rds-storage-pricing.csv  rds-storage-pricing.json  redshift-pricing.json  s3-pricing.csv  s3-pricing.json  sagemaker-pricing.json
scripts/: DATASYNC_EXPORT_README.md  QUICKSTART-s3-accesspoints.md  README-s3-accesspoints-export.md  access-analyzer-export.py  access_analyzer_export.py  acm-export.py  acm-privateca-export.py  acm_export.py  acm_privateca_export.py  ami-export.py  ami_export.py  api-gateway-export.py  api_gateway_export.py  apprunner-export.py  apprunner_export.py  appsync-export.py  appsync_export.py  autoscaling-export.py  autoscaling_export.py  backup-export.py  backup_export.py  bedrock-export.py  bedrock_export.py  billing-export.py  billing_export.py  budgets-export.py  budgets_export.py  cloudformation-export.py  cloudformation_export.py  cloudfront-export.py  cloudfront_export.py  cloudmap-export.py  cloudmap_export.py  cloudtrail-export.py  cloudtrail_export.py  cloudwatch-export.py  cloudwatch_export.py  codebuild-export.py  codebuild_export.py  codecommit-export.py  (+182 more)
scripts/smart_scan/: __init__.py  analyzer.py  executor.py  mapping.py  selector.py  test_executor_import.py  test_mapping.py  test_selector_import.py
sslib/: __init__.py  aws_client.py  concurrency.py  config.py  cost.py
tests/: test_dataframe_export.py  test_duplicate_code_refactoring.py  test_error_handling.py  test_migration_simulation.py  test_session_management.py  test_smoke.py  test_utils.py
tests/smart_scan/: __init__.py  test_analyzer.py  test_executor.py  test_mapping.py  test_selector.py
tests/sslib/: test_aws_client.py  test_concurrency.py  test_config.py  test_cost.py
tests/test_exporters/: test_ec2_export.py  test_iam_export.py  test_rds_export.py  test_s3_export.py  test_vpc_export.py
